# sphinx-collections-fork

./: .gitignore  .pdm.toml  pyproject.toml  todo
docs/: conf.py
new_tests/: conftest.py  package-lock.json  test_github.py
new_tests/roots/test-something/: conf.py
new_tests/test-something/: conf.py
src/sphinx-collections-fork/: __init__.py  collections.py
src/sphinx-collections-fork/collections/: __init__.py  main.py
src/sphinx-collections-fork/directives/: if_collection.py
src/sphinx-collections-fork/drivers/: copy_folder.py  function.py  report.py  string.py
src/sphinx_collections_fork/: __init__.py  api.py  collections.py
src/sphinx_collections_fork/drivers/: __init__.py  copy_file.py  git.py  jinja.py  symlink.py
tests/doc_test/config_string/: conf.py
tests/doc_test/config_symlink/: conf.py
