[project]
name = "sphinx-collections-fork"
version = "0.1.0"
description = "A fork of the Sphinx collection extension for mapping directories and services as document folders"
authors = [
    {name = "Kai Norman Clasen", email = "kai.ce.tub@gmail.com"},
]
dependencies = [
    "sphinx>=4",
    "gitpython>=3.1.29",
    "jinja2>=3.1.2",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "MIT"}
[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.build]
includes = [
    "LICENSE",
    "src",
]
package-dir = "src"

[tool.pdm.dev-dependencies]
[tool.isort]
profile = "black"
